Added option to customize content handler